# qt-remote-test

./: CMakeLists.txt  main_cli.cpp  main_srv.cpp  serverobject.rep
